amended colour for dd and main body text - also tried to horizontally align social icons but the icons are out of sync with text - needs fixing so they all sit on the same line

--- a/_sass/_navigation.scss
+++ b/_sass/_navigation.scss
@@ -10,7 +10,9 @@ nav {
 		display: none;
 	    }
 	    &:hover > ul {
-		background-color: rgba(253, 253, 253, 0.7);
+		// background-color: rgba(253, 253, 253, 0.7);
+		background-color:#ffc955;
+		opacity:0.7;
 		display: block;
 		// border: 1px solid $brand-color;
 		// border-top: 2px solid $brand-color;
